h1. Changelog

h2. Edge

* new features:
** callbacks for connection open/close and authentication
** automatic reconnect after connection broken
** new syntax of sending message(Socky.send instead of render :socky)
** deprecation of old syntax(render :socky and Socky.send_to_all, send_to_clients etc.)
** new syntax is compatybile with rails 3
* bugfixes:
** catch exeption on invalid format of received data

h2. 0.0.9 / 2010-06-20

*IMPORTANT! This version will not work with gem version lower than 0.0.9*

* new features:
** support for websocket draft 76
** support for wss/SSL connections
** allow multiple socky servers
** socky now sending all messages in JSON format
* bugfixes:
** none

h2. 0.0.7

* initial release